# W2VServer

./: .gitignore  CBOWModel.hpp  CMakeLists.txt  ExpTable.hpp  Randomizer.hpp  Sampler.hpp  SkipGramModel.hpp  VecModel.hpp  Vocabulary.hpp  Word2VecModel.hpp  Word2VecTrainer.hpp  main.cpp  types.h  word2vec.cpp  word2vec.h
